# POKER-NOW

./: .gitignore  AGENT.md  README.md
.github/workflows/: ci.yml
common/: PRODUCT-SPEC.md  PROTOCOL.md  README.md
common/components/poker_core/: CMakeLists.txt
common/components/poker_core/include/: app_flow.h  game_state.h  hand_eval.h  master_engine.h  pbus.h  pbus_proto.h  pk_config.h  side_pot.h  voice.h  voice_ids.h
common/components/poker_core/include/hal/: hal_audio.h  hal_battery.h  hal_display.h  hal_input.h  hal_misc.h  hal_power.h
common/components/poker_core/src/: app_flow.c  app_screens.c  app_ui.h  game_state.c  hand_eval.c  master_engine.c  number_speech.c  pbus.c  pbus_clock.c  pbus_int.h  pbus_reliab.c  pbus_session.c  pbus_transport.c  pk_testio.c  side_pot.c  ui_lvgl.c  voice_adpcm.c
common/voice/: voice_list.tsv
devices/: README.md
devices/Cardputer-Adv/: CMakeLists.txt  README.md  dev-guide.md  hardware-reference.md  sdkconfig.defaults
devices/Cardputer-Adv/main/: CMakeLists.txt  app_main.c  board_config.h  board_i2c.c  es8311_cardputer.c  es8311_cardputer.h  hal_audio.c  hal_battery.c  hal_display.c  hal_input.c  hal_misc.c  hal_power.c  tca8418.c  tca8418.h
devices/StickS3/: CMakeLists.txt  README.md  dev-guide.md  hardware-reference.md  partitions.csv  sdkconfig.defaults
devices/StickS3/main/: CMakeLists.txt  app_main.c  board_config.h  board_i2c.c  board_i2c.h  es8311_min.c  es8311_min.h  hal_audio.c  hal_battery.c  hal_display.c  hal_input.c  hal_misc.c  hal_power.c  idf_component.yml  imu_bmi270.c  m5pm1.c  m5pm1.h
devices/xingzhi-cube-1.54tft-wifi/: CMakeLists.txt  README.md  dev-guide.md  hardware-reference.md  sdkconfig.defaults
devices/xingzhi-cube-1.54tft-wifi/main/: CMakeLists.txt  app_main.c  board_config.h  hal_audio.c  hal_battery.c  hal_battery_board.h  hal_display.c  hal_input.c  hal_misc.c  hal_power.c
devices/zuowei-c3-lcd-pwr/: CMakeLists.txt  README.md  dev-guide.md  hardware-reference.md  sdkconfig.defaults
devices/zuowei-c3-lcd-pwr/components/vb6824/: CMakeLists.txt  vb6824.c
devices/zuowei-c3-lcd-pwr/main/: CMakeLists.txt  app_main.c  board_config.h  hal_audio.c  hal_battery.c  hal_display.c  hal_input.c  hal_misc.c  hal_power.c  hal_power_board.h
tools/: README.md  gen_voice.sh  run_tests.sh  test_hand_eval.c  wav2adpcm.py
